clickgraph-go/clickgraph_ffi/clickgraph_ffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
void* uniffi_clickgraph_ffi_fn_clone_connection(void* ptr, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_free_connection(void* ptr, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_create_edge(void* ptr, RustBuffer edge_type, RustBuffer from_id, RustBuffer to_id, RustBuffer properties, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_create_edges(void* ptr, RustBuffer edge_type, RustBuffer batch, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_connection_create_node(void* ptr, RustBuffer label, RustBuffer properties, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_connection_create_nodes(void* ptr, RustBuffer label, RustBuffer batch, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_delete_edges(void* ptr, RustBuffer edge_type, RustBuffer filter, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_delete_nodes(void* ptr, RustBuffer label, RustBuffer filter, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_execute_sql(void* ptr, RustBuffer sql, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_export(void* ptr, RustBuffer cypher, RustBuffer output_path, RustBuffer options, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_connection_export_to_sql(void* ptr, RustBuffer cypher, RustBuffer output_path, RustBuffer options, RustCallStatus *out_status
);
uint64_t uniffi_clickgraph_ffi_fn_method_connection_get_query_timeout(void* ptr, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_import_csv_file(void* ptr, RustBuffer label, RustBuffer file_path, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_import_file(void* ptr, RustBuffer label, RustBuffer file_path, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_import_json(void* ptr, RustBuffer label, RustBuffer json_lines, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_import_json_file(void* ptr, RustBuffer label, RustBuffer file_path, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_import_parquet_file(void* ptr, RustBuffer label, RustBuffer file_path, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_method_connection_query(void* ptr, RustBuffer cypher, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_method_connection_query_graph(void* ptr, RustBuffer cypher, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_method_connection_query_remote(void* ptr, RustBuffer cypher, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_method_connection_query_remote_graph(void* ptr, RustBuffer cypher, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_connection_query_to_sql(void* ptr, RustBuffer cypher, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_set_query_timeout(void* ptr, uint64_t timeout_ms, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_connection_store_subgraph(void* ptr, void* graph, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_method_connection_upsert_edge(void* ptr, RustBuffer edge_type, RustBuffer from_id, RustBuffer to_id, RustBuffer properties, RustCallStatus *out_status
);
RustBuffer uniffi_clickgraph_ffi_fn_method_connection_upsert_node(void* ptr, RustBuffer label, RustBuffer properties, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_clone_database(void* ptr, RustCallStatus *out_status
);
void uniffi_clickgraph_ffi_fn_free_database(void* ptr, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_constructor_database_open(RustBuffer schema_path, RustCallStatus *out_status
);
void* uniffi_clickgraph_ffi_fn_constructor_database_open_in_memory(RustBuffer schema_path, RustBuffer config, RustCallStatus *out_status
);